corregido css resultados

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ footer p, footer a {
   width: 250px;
   height: 100px;
   line-height: 100px;
+  overflow-y: scroll;
 }
 
 button#igual, button#reset {
